<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/selector_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_topic"
        android:icon="@drawable/selector_special"
        android:title="@string/title_topic" />

    <item
        android:id="@+id/navigation_sort"
        android:icon="@drawable/selector_classify"
        android:title="@string/title_sort" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/selector_cart"
        android:title="@string/title_shoping" />

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/selector_own"
        android:title="@string/title_me" />

</menu>
